DuPont DevSB/src/objects/pse__Search_Resources_Global__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Contains org-wide settings for Search Resources</description>
    <fields>
        <fullName>pse__Contact_Field_1__c</fullName>
        <description>API name of a field in the contact object to be displayed in Search Resources. This option is ignored when Display Resource Description is true.</description>
        <inlineHelpText>API name of a field in the contact object to be displayed in Search Resources. This option is ignored when Display Resource Description is true.</inlineHelpText>
        <label>Contact Field 1</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>pse__Contact_Field_2__c</fullName>
        <description>API name of a field in the contact object to be displayed in Search Resources. This option is ignored when Display Resource Description is true.</description>
        <inlineHelpText>API name of a field in the contact object to be displayed in Search Resources. This option is ignored when Display Resource Description is true.</inlineHelpText>
        <label>Contact Field 2</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>pse__Contact_Field_3__c</fullName>
        <description>API name of a field in the contact object to be displayed in Search Resources. This option is ignored when Display Resource Description is true.</description>
        <inlineHelpText>API name of a field in the contact object to be displayed in Search Resources. This option is ignored when Display Resource Description is true.</inlineHelpText>
        <label>Contact Field 3</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>pse__Display_Resource_Description__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When true, only the resource&apos;s description is shown. When false, Contact Fields 1 to 3 are shown if they contain a valid API name of a field in the contact object. The default value is false.</description>
        <inlineHelpText>When true, only the resource&apos;s description is shown. When false, Contact Fields 1 to 3 are shown if they contain a valid API name of a field in the contact object. The default value is false.</inlineHelpText>
        <label>Display Resource Description</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Geolocation_Service_URL__c</fullName>
        <defaultValue>&quot;http://www.mapquestapi.com/geocoding/v1/address?key=Fmjtd%7Cluub2q6820%2Caa%3Do5-961xh0&amp;outFormat=json&amp;maxResults=1&quot;</defaultValue>
        <description>Mapping service URL to use when obtaining latitude and longitude using an address. Default value: http://www.mapquestapi.com/geocoding/v1/address?key=Fmjtd%7Cluub2q6820%2Caa%3Do5-961xh0&amp;outFormat=json&amp;maxResults=1</description>
        <inlineHelpText>Mapping service URL to use when obtaining latitude and longitude using an address. Default value: http://www.mapquestapi.com/geocoding/v1/address?key=Fmjtd%7Cluub2q6820%2Caa%3Do5-961xh0&amp;outFormat=json&amp;maxResults=1</inlineHelpText>
        <label>Geolocation Service URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>pse__Mapquest_Endpoint_URL__c</fullName>
        <defaultValue>&quot;http://open.mapquestapi.com/&quot;</defaultValue>
        <description>Defines the Mapquest Endpoint URL used to validate against the endpoint in Salesforce remote site settings before using the Mapquest Geolocation API. This URL should be a subset of the Geolocation Service URL.</description>
        <inlineHelpText>Defines the Mapquest Endpoint URL used to validate against the endpoint in Salesforce remote site settings before using the Mapquest Geolocation API. This URL should be a subset of the Geolocation Service URL.</inlineHelpText>
        <label>Mapquest Endpoint URL</label>
        <type>Url</type>
    </fields>
    <label>Search Resources Global</label>
</CustomObject>